--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,7 +39,7 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres -d db_lognet_ura -h 127.0.0.1 -p 5432"]
+      test: ["CMD-SHELL", "pg_isready -U lognet -d db_lognet_ura -h 127.0.0.1 -p 5432"]
       interval: 5s
       timeout: 5s
       retries: 10
